Issue 506 removing extra spaces in problems.css file

--- a/tutor/app/assets/stylesheets/problems.css
+++ b/tutor/app/assets/stylesheets/problems.css
@@ -15,24 +15,29 @@
 }
 
 #crumbs ul {
-    list-style-type: none;
+	list-style-type: none;
 }
-#crumbs ul li.sub { 
-	position: absolute; margin-left: 0%; 
-} 
-#crumbs ul li.sub1 { 
-	position: absolute; margin-left: 13.5%; 
-} 
-#crumbs ul li.sub2 { 
-	position: absolute; margin-left: 27%; 
-} 
-#crumbs ul li.sub3 { 
-	position: absolute; margin-left: 40.5%; 
-} 
-#crumbs ul li.sub4 { 
-	position: absolute; margin-left: 54%; 
-} 
-  
+
+#crumbs ul li.sub {
+	position: absolute; margin-left: 0%;
+}
+
+#crumbs ul li.sub1 {
+	position: absolute; margin-left: 13.5%;
+}
+
+#crumbs ul li.sub2 {
+	position: absolute; margin-left: 27%;
+}
+
+#crumbs ul li.sub3 {
+	position: absolute; margin-left: 40.5%;
+}
+
+#crumbs ul li.sub4 {
+	position: absolute; margin-left: 54%;
+}
+
 #crumbs ul li a {
 	display: block;
 	height: 40px;
@@ -43,13 +48,11 @@
 	position: relative;
 	margin: 0 40px 0 0; 
 	list-style-type: none;
-
 	font-size: 20px;
 	text-decoration: none;
 	color: #fff;
 	font-style: bold;
 }
-
 
 #crumbs ul li a:before {
 	content: "";  
@@ -59,57 +62,62 @@
 	position: absolute; left: 0; top: 0;
 }
 
-
 #crumbs ul li a:after {
 	content: "";  
 	border-top: 25px solid transparent;
-border-bottom: 20px solid transparent;
-border-left: 45px transparent #3498db;
+	border-bottom: 20px solid transparent;
+	border-left: 45px transparent #3498db;
 	position: absolute; right: -40px; top: 0;
 }
+
 #crumbs ul li:first-child a {
-	border-top-left-radius: 10px; border-bottom-left-radius: 10px;
+	border-top-left-radius: 10px;
+	border-bottom-left-radius: 10px;
 }
+
 #crumbs ul li:first-child a:before {
-	display: none; 
+	display: none;
 }
 
 #crumbs ul li:last-child a {
 	padding-right: 80px;
 	border-top-right-radius: 10px; border-bottom-right-radius: 10px;
 }
+
 #crumbs ul li:last-child a:after {
-	display: none; 
+	display: none;
 }
 
 #crumbs ul li a:hover {
 	background: #fa5ba5;
 }
+
 #crumbs ul li a:hover:after {
 	border-left-color: #fa5ba5;
 }
+
 #crumbs ul li a:active {
 	background: #2383C4;
 }
 
 #crumbs ul li a.visit {
-	background: #2c3e50;
+	background: #2C3E50;
 }
 
 #crumbs ul li a.visit:after {
 	border-left-color: #333;
 }
+
 #crumbs ul li a.preventclick{
-    pointer-events: none;
-    	background: darkgray;
-
+	pointer-events: none;
+	background: darkgray;
 }
+
 #crumbs ul li a.preventclick:after{
-    pointer-events: none;
-    	border-left-color: darkgray;
-
+	pointer-events: none;
+	border-left-color: darkgray;
 }
-#crumbs ul li a.preventclick:before{
-    pointer-events: none;
 
+#crumbs ul li a.preventclick:before{
+	pointer-events: none;
 }
